# kuba-libre

./: .gitignore  KubaGame.py  KubaGameTester.py  README.md  docker-compose.yml  marble_game.py  marble_game_tester.py  requirements.txt
api/: .dockerignore  Dockerfile  __init__.py  app.py  config.py  constants.py  db.py  main.py  requirements.txt  security.py
api/controllers/: __init__.py  game_controller.py  player_controller.py  responses.py
api/models/: __init__.py  game_model.py  move_model.py  player_model.py  pydantic_object_id.py
marble-game/: Dockerfile  pyproject.toml
marble-game-ui/: .gitattributes  .gitignore  Dockerfile  README.md  index.ts  package.json
marble-game-ui/src/: App.tsx
marble-game-ui/src/components/: Error.tsx  Loading.tsx  SiteFooter.tsx  SiteHeader.tsx
marble-game-ui/src/pages/: InstructionsPage.tsx  PrivacyPage.tsx  TermsPage.tsx
marble-game-ui/src/utils/: callAPI.ts  index.ts  parseGridString.ts
marble-game/src/marble_game/: __init__.py  ai.py  game_board.py  marble_game.py
marble-game/tests/: json_tests.py
marble_game/: __init__.py  ai.py  game_board.py  marble_game.py
marble_game_ui/: README.md  index.ts  package-lock.json  package.json
marble_game_ui/public/: index.html  manifest.json
marble_game_ui/src/: App.tsx  index.tsx  react-app-env.d.ts  theme.ts
marble_game_ui/src/components/: Loading.tsx  ProtectedRoute.tsx  SiteFooter.tsx  SiteHeader.tsx  SwipeableTabs.tsx  index.ts
marble_game_ui/src/hooks/: index.ts  useGetPlayerID.ts
tests/: __init__.py  game_board_tests.py  json_tests.py  marble_game_tests.py
(+12 files in other folders)
